--- a/DSA-Python-Cap04-Exercicios.ipynb
+++ b/DSA-Python-Cap04-Exercicios.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mesa', 'Cadeira', 'Rack', 'Sofa', 'Tapete']\n"
+      "['Mesa', 'Cadeira', 'Rack', 'Sofa', 'Tapete', 'Poltrona']\n"
      ]
     },
     {
@@ -76,7 +78,7 @@
        "list"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +86,7 @@
    "source": [
     "# Exercício 2 - Crie uma lista de 5 objetos e imprima na tela\n",
     "\n",
-    "lista1 = ['Mesa','Cadeira','Rack','Sofa','Tapete']\n",
+    "lista1 = ['Mesa','Cadeira','Rack','Sofa','Tapete','Poltrona']\n",
     "\n",
     "print(lista1)\n",
     "\n",
@@ -275,6 +277,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -282,6 +285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
