--- a/DSA-Python-Cap05-Exercicios-Funcoes.ipynb
+++ b/DSA-Python-Cap05-Exercicios-Funcoes.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,15 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dentro da função o total é:  30\n",
-      "Fora da função o total é:  0\n"
+      "Dentro da função o total é de:  30\n",
+      "Fora da função o total é de:  0\n"
      ]
     }
    ],
@@ -198,12 +198,12 @@
     "total = 0\n",
     "def soma( arg1, arg2 ):\n",
     "    total = arg1 + arg2; \n",
-    "    print (\"Dentro da função o total é: \", total)\n",
+    "    print (\"Dentro da função o total é de: \", total)\n",
     "    return total;\n",
     "\n",
     "\n",
     "soma( 10, 20 );\n",
-    "print (\"Fora da função o total é: \", total)"
+    "print (\"Fora da função o total é de: \", total)"
    ]
   },
   {
