--- a/DSA-Python-Cap05-Exercicios-Loops-Condiconais.ipynb
+++ b/DSA-Python-Cap05-Exercicios-Loops-Condiconais.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,6 +24,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,111 +33,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoje é dia de descanso\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 1 - Crie uma estrutura que pergunte ao usuário qual o dia da semana. Se o dia for igual a Domingo ou \n",
-    "# igual a sábado, imprima na tela \"Hoje é dia de descanso\", caso contrário imprima na tela \"Você precisa trabalhar!\""
+    "# igual a sábado, imprima na tela \"Hoje é dia de descanso\", caso contrário imprima na tela \"Você precisa trabalhar!\"\n",
+    "\n",
+    "dia_semana = input('Qual é o dia da semana?: ')\n",
+    "if dia_semana == 'Domingo' or dia_semana == 'Sábado':\n",
+    "    print('Hoje é dia de descanso!')\n",
+    "else: \n",
+    "    print('Você precisa trabalhar!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Morango está na lista\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercício 2 - Crie uma lista de 5 frutas e verifique se a fruta 'Morango' faz parte da lista"
+    "# Exercício 2 - Crie uma lista de 5 frutas e verifique se a fruta 'Morango' faz parte da lista\n",
+    "\n",
+    "lista = ['Abacaxi','Morango','Abacate','Pera','Banana']\n",
+    "\n",
+    "for fruta in lista:\n",
+    "    if fruta == \"Morango\":\n",
+    "        print('Morango está na lista')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 3 - Crie uma tupla de 4 elementos, multiplique cada elemento da tupla por 2 e guarde os resultados em uma \n",
-    "# lista"
+    "# lista\n",
+    "\n",
+    "tupla = (1,2,3,4)\n",
+    "lista = []\n",
+    "\n",
+    "for num in tupla:\n",
+    "    valor = num * 2\n",
+    "    lista.append(valor)\n",
+    "print(lista)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "102\n",
+      "104\n",
+      "106\n",
+      "108\n",
+      "110\n",
+      "112\n",
+      "114\n",
+      "116\n",
+      "118\n",
+      "120\n",
+      "122\n",
+      "124\n",
+      "126\n",
+      "128\n",
+      "130\n",
+      "132\n",
+      "134\n",
+      "136\n",
+      "138\n",
+      "140\n",
+      "142\n",
+      "144\n",
+      "146\n",
+      "148\n",
+      "150\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercício 4 - Crie uma sequência de números pares entre 100 e 150 e imprima na tela"
+    "# Exercício 4 - Crie uma sequência de números pares entre 100 e 150 e imprima na tela\n",
+    "\n",
+    "for i in range(100,151,2):\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 5 - Crie uma variável chamada temperatura e atribua o valor 40. Enquanto temperatura for maior que 35, \n",
-    "# imprima as temperaturas na tela"
+    "# imprima as temperaturas na tela\n",
+    "\n",
+    "temperatura = 40\n",
+    "\n",
+    "while temperatura > 35:\n",
+    "    print(temperatura)\n",
+    "    temperatura = temperatura - 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 6 - Crie uma variável chamada contador = 0. Enquanto counter for menor que 100, imprima os valores na tela,\n",
-    "# mas quando for encontrado o valor 23, interrompa a execução do programa"
+    "# mas quando for encontrado o valor 23, interrompa a execução do programa\n",
+    "\n",
+    "contador = 0\n",
+    "while contador < 100:\n",
+    "    if contador == 23:\n",
+    "        break\n",
+    "    print(contador)\n",
+    "    contador = contador + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 7 - Crie uma lista vazia e uma variável com valor 4. Enquanto o valor da variável for menor ou igual a 20, \n",
-    "# adicione à lista, apenas os valores pares e imprima a lista"
+    "# adicione à lista, apenas os valores pares e imprima a lista\n",
+    "lista1 = []\n",
+    "valor = 4\n",
+    "\n",
+    "while valor <= 20:\n",
+    "    lista1.append(valor)\n",
+    "    valor = valor + 2\n",
+    "print(lista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 8 - Transforme o resultado desta função range em uma lista: range(5, 45, 2)\n",
-    "nums = range(5, 45, 2)"
+    "nums = range(5, 45, 2)\n",
+    "\n",
+    "print(list(nums))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vista roupas leves.\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 9 - Faça a correção dos erros no código abaixo e execute o programa. Dica: são 3 erros.\n",
     "temperatura = float(input('Qual a temperatura? '))\n",
-    "if temperatura > 30\n",
-    "print('Vista roupas leves.')\n",
-    "else\n",
+    "\n",
+    "if temperatura > 30:\n",
+    "    print('Vista roupas leves.')\n",
+    "else:\n",
     "    print('Busque seus casacos.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O caracter r aparece 5 vezes na frase.\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 10 - Faça um programa que conte quantas vezes a letra \"r\" aparece na frase abaixo. Use um placeholder na \n",
     "# sua instrução de impressão\n",
     "\n",
     "# “A gratidão é a virtude das almas nobres. O quão feliz é uma pessoa depende da profundidade de sua gratidão.” \n",
     "\n",
-    "frase = \"A gratidão é a virtude das almas nobres. O quão feliz é uma pessoa depende da profundidade de sua gratidão.\" "
+    "frase = \"A gratidão é a virtude das almas nobres. O quão feliz é uma pessoa depende da profundidade de sua gratidão.\" \n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "for caracter in frase:\n",
+    "    if caracter == 'r':\n",
+    "        count += 1\n",
+    "print('O caracter r aparece %s vezes na frase.' %(count))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,6 +330,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
