--- a/DSA-Python-Lab3-Expressões-Regulares.ipynb
+++ b/DSA-Python-Lab3-Expressões-Regulares.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,13 +10,6 @@
     "## <font color='blue'>Fundamentos de Linguagem Python Para Análise de Dados e Data Science</font>\n",
     "\n",
     "## <font color='blue'>Lab 3 - Trabalhando com Expressões Regulares em Python com ChatGPT</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![DSA](imagens/Lab3.png)"
    ]
   },
   {
@@ -38,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -153,6 +149,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -191,219 +188,76 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## REGEX com ChatGPT\n",
     "\n",
-    "Música: Tempo Perdido\n",
+    "Música: Champagne Problems\n",
     "\n",
-    "Legião Urbana"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Variável do tipo string\n",
-    "musica = '''\n",
-    "Todos os dias quando acordo\n",
-    "Não tenho mais\n",
-    "O tempo que passou\n",
-    "Mas tenho muito tempo\n",
-    "Temos todo o tempo do mundo\n",
-    "Todos os dias\n",
-    "Antes de dormir\n",
-    "Lembro e esqueço\n",
-    "Como foi o dia\n",
-    "Sempre em frente\n",
-    "Não temos tempo a perder\n",
-    "Nosso suor sagrado\n",
-    "É bem mais belo\n",
-    "Que esse sangue amargo\n",
-    "E tão sério\n",
-    "E selvagem! Selvagem!\n",
-    "Selvagem!\n",
-    "Veja o sol\n",
-    "Dessa manhã tão cinza\n",
-    "A tempestade que chega\n",
-    "É da cor dos teus olhos\n",
-    "Castanhos\n",
-    "Então me abraça forte\n",
-    "E diz mais uma vez\n",
-    "Que já estamos\n",
-    "Distantes de tudo\n",
-    "Temos nosso próprio tempo\n",
-    "Temos nosso próprio tempo\n",
-    "Temos nosso próprio tempo\n",
-    "Não tenho medo do escuro\n",
-    "Mas deixe as luzes\n",
-    "Acesas agora\n",
-    "O que foi escondido\n",
-    "É o que se escondeu\n",
-    "E o que foi prometido\n",
-    "Ninguém prometeu\n",
-    "Nem foi tempo perdido\n",
-    "Somos tão jovens\n",
-    "Tão jovens! Tão jovens!\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Todos os dias quando acordo\n",
-      "Não tenho mais\n",
-      "O tempo que passou\n",
-      "Mas tenho muito tempo\n",
-      "Temos todo o tempo do mundo\n",
-      "Todos os dias\n",
-      "Antes de dormir\n",
-      "Lembro e esqueço\n",
-      "Como foi o dia\n",
-      "Sempre em frente\n",
-      "Não temos tempo a perder\n",
-      "Nosso suor sagrado\n",
-      "É bem mais belo\n",
-      "Que esse sangue amargo\n",
-      "E tão sério\n",
-      "E selvagem! Selvagem!\n",
-      "Selvagem!\n",
-      "Veja o sol\n",
-      "Dessa manhã tão cinza\n",
-      "A tempestade que chega\n",
-      "É da cor dos teus olhos\n",
-      "Castanhos\n",
-      "Então me abraça forte\n",
-      "E diz mais uma vez\n",
-      "Que já estamos\n",
-      "Distantes de tudo\n",
-      "Temos nosso próprio tempo\n",
-      "Temos nosso próprio tempo\n",
-      "Temos nosso próprio tempo\n",
-      "Não tenho medo do escuro\n",
-      "Mas deixe as luzes\n",
-      "Acesas agora\n",
-      "O que foi escondido\n",
-      "É o que se escondeu\n",
-      "E o que foi prometido\n",
-      "Ninguém prometeu\n",
-      "Nem foi tempo perdido\n",
-      "Somos tão jovens\n",
-      "Tão jovens! Tão jovens!\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(musica)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1- Crie um REGEX para contar quantas vezes o caracter \"a\" aparece em todo o texto da música.\n",
-    "# 2- Crie um REGEX em Python para contar quantas vezes a palavra tempo aparece na música.\n",
-    "# 3- Crie um REGEX em Python para extrair as palavras seguidas por exclamação.\n",
-    "# 4- Crie um REGEX que extrai qualquer palavra cujo antecessor seja a palavra \"esse\" e o sucessor seja a palavra \"amargo\" em um texto.\n",
-    "# 5- Crie um REGEX que retorne as palavras com acento, mas somente os caracteres na palavra que são anteriores ao caracter com acento.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Aqui está a solução."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O caractere 'a' aparece 39 vezes no texto.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1- Crie um REGEX para contar quantas vezes o caracter \"a\" aparece em todo o texto da música.\n",
-    "match = re.findall(\"a\", musica)\n",
-    "count = len(match)\n",
-    "print(\"O caractere 'a' aparece\", count, \"vezes no texto.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O caractere 'a' apareceu 39 vezes na música.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 1- Crie um REGEX para contar quantas vezes o caracter \"a\" aparece em todo o texto da música.\n",
-    "resultado1 = len(re.findall(\"a\", musica))\n",
-    "print(\"O caractere 'a' apareceu\", resultado1, \"vezes na música.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A palavra 'tempo' aparece 8 vezes no texto.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2- Crie um REGEX em Python para contar quantas vezes a palavra tempo aparece na música.\n",
-    "match = re.findall(r\"\\btempo\\b\", musica)\n",
-    "count = len(match)\n",
-    "print(\"A palavra 'tempo' aparece\", count, \"vezes no texto.\")"
+    "Taylor Swift"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A palavra 'tempo' apareceu 8 vezes na música.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 2- Crie um REGEX em Python para contar quantas vezes a palavra tempo aparece na música.\n",
-    "resultado2 = len(re.findall(\"tempo\", musica))\n",
-    "print(\"A palavra 'tempo' apareceu\", resultado2, \"vezes na música.\")"
+    "# Variável do tipo string\n",
+    "musica = '''\n",
+    "You booked the night train for a reason\n",
+    "So you could sit there in this hurt\n",
+    "Bustling crowds or silent sleepers\n",
+    "You're not sure which is worse\n",
+    "Because I dropped your hand while dancing\n",
+    "Left you out there standing\n",
+    "Crestfallen on the landing\n",
+    "Champagne problems\n",
+    "Your mom's ring in your pocket\n",
+    "My picture in your wallet\n",
+    "Your heart was glass, I dropped it\n",
+    "Champagne problems\n",
+    "You told your family for a reason\n",
+    "You couldn't keep it in\n",
+    "Your sister splashed out on the bottle\n",
+    "Now no one's celebrating\n",
+    "Dom Pérignon, you brought it\n",
+    "No crowd of friends applauded\n",
+    "Your hometown skeptics called it\n",
+    "Champagne problems\n",
+    "You had a speech, you're speechless\n",
+    "Love slipped beyond your reaches\n",
+    "And I couldn't give a reason\n",
+    "Champagne problems\n",
+    "Your Midas touch on the Chevy door\n",
+    "November flush and your flannel cure\n",
+    "\"This dorm was once a madhouse\"\n",
+    "I made a joke, \"Well, it's made for me\"\n",
+    "How evergreen, our group of friends\n",
+    "Don't think we'll say that word again\n",
+    "And soon they'll have the nerve to deck the halls\n",
+    "That we once walked through\n",
+    "One for the money, two for the show\n",
+    "I never was ready, so I watch you go\n",
+    "Sometimes you just don't know the answer\n",
+    "'Til someone's on their knees and asks you\n",
+    "\"She would've made such a lovely bride\n",
+    "What a shame she's fucked in the head, \" they said\n",
+    "But you'll find the real thing instead\n",
+    "She'll patch up your tapestry that I shred\n",
+    "And hold your hand while dancing\n",
+    "Never leave you standing\n",
+    "Crestfallen on the landing\n",
+    "With champagne problems\n",
+    "Your mom's ring in your pocket\n",
+    "Her picture in your wallet\n",
+    "You won't remember all my\n",
+    "Champagne problems\n",
+    "You won't remember all my\n",
+    "Champagne problems\n",
+    "'''"
    ]
   },
   {
@@ -415,14 +269,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "As palavras seguidas por exclamação são: []\n"
+      "\n",
+      "You booked the night train for a reason\n",
+      "So you could sit there in this hurt\n",
+      "Bustling crowds or silent sleepers\n",
+      "You're not sure which is worse\n",
+      "Because I dropped your hand while dancing\n",
+      "Left you out there standing\n",
+      "Crestfallen on the landing\n",
+      "Champagne problems\n",
+      "Your mom's ring in your pocket\n",
+      "My picture in your wallet\n",
+      "Your heart was glass, I dropped it\n",
+      "Champagne problems\n",
+      "You told your family for a reason\n",
+      "You couldn't keep it in\n",
+      "Your sister splashed out on the bottle\n",
+      "Now no one's celebrating\n",
+      "Dom Pérignon, you brought it\n",
+      "No crowd of friends applauded\n",
+      "Your hometown skeptics called it\n",
+      "Champagne problems\n",
+      "You had a speech, you're speechless\n",
+      "Love slipped beyond your reaches\n",
+      "And I couldn't give a reason\n",
+      "Champagne problems\n",
+      "Your Midas touch on the Chevy door\n",
+      "November flush and your flannel cure\n",
+      "\"This dorm was once a madhouse\"\n",
+      "I made a joke, \"Well, it's made for me\"\n",
+      "How evergreen, our group of friends\n",
+      "Don't think we'll say that word again\n",
+      "And soon they'll have the nerve to deck the halls\n",
+      "That we once walked through\n",
+      "One for the money, two for the show\n",
+      "I never was ready, so I watch you go\n",
+      "Sometimes you just don't know the answer\n",
+      "'Til someone's on their knees and asks you\n",
+      "\"She would've made such a lovely bride\n",
+      "What a shame she's fucked in the head, \" they said\n",
+      "But you'll find the real thing instead\n",
+      "She'll patch up your tapestry that I shred\n",
+      "And hold your hand while dancing\n",
+      "Never leave you standing\n",
+      "Crestfallen on the landing\n",
+      "With champagne problems\n",
+      "Your mom's ring in your pocket\n",
+      "Her picture in your wallet\n",
+      "You won't remember all my\n",
+      "Champagne problems\n",
+      "You won't remember all my\n",
+      "Champagne problems\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# 3- Crie um REGEX em Python para extrair as palavras seguidas por exclamação.\n",
-    "match = re.findall(r\"\\b\\w+!\\b\", musica)\n",
-    "print(\"As palavras seguidas por exclamação são:\", match)"
+    "print(musica)"
    ]
   },
   {
@@ -434,117 +337,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estas são as palavras seguidas por exclamação: ['selvagem!', 'Selvagem!', 'Selvagem!', 'jovens!', 'jovens!']\n"
+      "O caracter a aparece 84 vezes no texto.\n"
      ]
     }
    ],
    "source": [
-    "# 3- Crie um REGEX em Python para extrair as palavras seguidas por exclamação.\n",
-    "resultado3 = re.findall(r'\\b\\w+!', musica)\n",
-    "print(\"Estas são as palavras seguidas por exclamação:\", resultado3)"
+    "# 1- Crie um REGEX para contar quantas vezes o caracter \"a\" aparece em todo o texto da música.\n",
+    "\n",
+    "ocorrencias = re.findall('a', musica)\n",
+    "quantidade = len(ocorrencias)\n",
+    "print('O caracter a aparece',quantidade,'vezes no texto.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palavras entre 'esse' e 'amargo': ['sangue']\n"
+      "A palavra champagne aparece 7 vezes no texto.\n"
      ]
     }
    ],
    "source": [
-    "# 4- Crie um REGEX que extrai qualquer palavra cujo antecessor seja a palavra \"esse\" e \n",
-    "# o sucessor seja a palavra \"amargo\" em um texto.\n",
-    "resultado = re.findall(r\"esse\\s(\\w+)\\samargo\", musica)\n",
-    "print(\"Palavras entre 'esse' e 'amargo':\", resultado)"
+    "# 2- Crie um REGEX em Python para contar quantas vezes a palavra \"champagne\" aparece na música.\n",
+    "\n",
+    "count = len(re.findall('Champagne',musica,re.IGNORECASE))\n",
+    "print('A palavra champagne aparece',count,'vezes no texto.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palavra(s) encontrada(s): ['sangue']\n"
+      "['was']\n"
      ]
     }
    ],
    "source": [
-    "# 4- Crie um REGEX que extrai qualquer palavra cujo antecessor seja a palavra \"esse\" e \n",
-    "# o sucessor seja a palavra \"amargo\" em um texto.\n",
-    "resultado4 = re.findall(r'\\besse\\s(\\w+)\\samargo\\b', musica)\n",
-    "print(\"Palavra(s) encontrada(s):\", resultado4)"
+    "# 4- Crie um REGEX que extrai qualquer palavra cujo antecessor seja a palavra \"heart\" e o sucessor seja a palavra \"glass\" em um texto.\n",
+    "\n",
+    "padrao = r'heart\\s+(\\w+)\\s+glass'\n",
+    "palavras = re.findall(padrao, musica)\n",
+    "print(palavras)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Partes das palavras com acentos: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5- Crie um REGEX que retorne as palavras com acento, mas somente os caracteres na palavra que \n",
-    "# são anteriores ao caracter com acento.\n",
-    "resultado = re.findall(r\"(\\w+)\\b[áéíóú]\", musica)\n",
-    "print(\"Partes das palavras com acentos:\", resultado)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Palavras com acento, sem o acento: ['N', 'esque', 'N', 't', 's', 'manh', 't', 'Ent', 'abra', 'j', 'pr', 'pr', 'pr', 'N', 'Ningu', 't', 'T', 'T']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5- Crie um REGEX que retorne as palavras com acento, mas somente os caracteres na palavra que \n",
-    "# são anteriores ao caracter com acento.\n",
-    "resultado = re.findall(r\"(\\w+)[\\u00C0-\\u017F]+\", musica)\n",
-    "print(\"Palavras com acento, sem o acento:\", resultado)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "As palavras acentuadas são: ['Nã', 'esqueç', 'Nã', 'tã', 'sé', 'manhã', 'tã', 'Entã', 'abraç', 'já', 'pró', 'pró', 'pró', 'Nã', 'Ningué', 'tã', 'Tã', 'Tã']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5- Crie um REGEX que retorne as palavras com acento, mas somente os caracteres na palavra que \n",
-    "# são anteriores ao caracter com acento.\n",
-    "resultado5 = re.findall(r'\\b[\\wÀ-ÿ]+[áéíóúãõç]', musica)\n",
-    "print(\"As palavras acentuadas são:\", resultado5)"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -552,6 +399,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -577,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
